added search feature

--- a/giphyAPI.html
+++ b/giphyAPI.html
@@ -8,10 +8,13 @@
   </head>
   <body>
     <div id="main">
-      <h1>≽^•⩊•^≼</h1>
+      <h1>Giphy API</h1>
       <img src="#" />
-      <button id="refresh_btn">More cats</button>
-      <input type="text" placeholder="Search gif..">
+      <div id="search_nav">
+        <input type="search" id="search_field" placeholder="Search gif..">
+        <button id="search_btn">Search</button>
+      </div>
+      <button id="refresh_btn">More of that</button>
     </div>
   </body>
 </html>
