added styles and div container

--- a/giphyAPI.html
+++ b/giphyAPI.html
@@ -14,7 +14,9 @@
         <input type="search" id="search_field" placeholder="Search gif..">
         <button id="search_btn">Search</button>
       </div>
-      <button id="refresh_btn">More of that</button>
+      <div id="refresh_btn_container">
+        <button id="refresh_btn">More of that</button>
+      </div>
     </div>
   </body>
 </html>
