added powered by giphy line

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div id="refresh_btn_container">
         <button id="refresh_btn">More of that</button>
       </div>
+    <p>Powered by <a href="https://giphy.com/">Giphy</a></p>
     </div>
   </body>
 </html>
